--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -54,7 +54,7 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: #fff;
+  background-color: #333;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
